--- a/privacy.html
+++ b/privacy.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
 <meta charset="UTF-8">
 <title>Privacy Policy – سياسة الخصوصية | Candy Pop Quest</title>
@@ -10,11 +10,9 @@
 </head>
 <body>
 
-<!-- ============================ -->
-<!--      Arabic Version          -->
-<!-- ============================ -->
+<!-- ================= Arabic Version ================= -->
 
-<div class="section" style="direction: rtl; text-align: right;">
+<div class="section" style="text-align: right;">
 <h1>سياسة الخصوصية – لعبة Candy Pop Quest</h1>
 
 <p>نحن نقدّر خصوصيتك. توضح هذه السياسة كيفية جمع البيانات واستخدامها داخل لعبة <strong>Candy Pop Quest</strong>.</p>
@@ -78,15 +76,13 @@
 
 <h2>8. التواصل</h2>
 
-<p>للأسئلة أو الدعم الفني، تواصل معنا عبر البريد:</p>
-<p><strong>your-email@example.com</strong></p>
+<p>للاستفسار أو الدعم الفني، تواصل معنا عبر:</p>
+<p><strong>waleeddevap@gmail.com</strong></p>
 </div>
 
-<!-- ============================ -->
-<!--      English Version         -->
-<!-- ============================ -->
+<!-- ================ English Version ================ -->
 
-<div class="section" style="direction: ltr; text-align: left;">
+<div class="section" dir="ltr" style="text-align: left;">
 <h1>Privacy Policy – Candy Pop Quest</h1>
 
 <p>Your privacy is important to us. This policy explains how data is collected and used inside the game <strong>Candy Pop Quest</strong>.</p>
@@ -110,7 +106,7 @@
 
 <p>The game uses <strong>Google AdMob</strong> to display ads.</p>
 <p>Google may collect non-personal data to improve ad quality.</p>
-<p>Users may choose to <strong>opt out of personalized ads</strong> through the consent screen inside the game.</p>
+<p>Users may choose to <strong>opt out of personalized ads</strong> through the in-game consent screen.</p>
 
 <hr>
 
@@ -123,7 +119,7 @@
 
 <h2>4. Data Sharing</h2>
 
-<p>No data is shared with third parties except Google services (AdMob, Firebase) according to their own policies.</p>
+<p>No data is shared with third parties except Google services (AdMob, Firebase) according to their policies.</p>
 
 <hr>
 
@@ -144,14 +140,14 @@
 
 <h2>7. Policy Updates</h2>
 
-<p>This Privacy Policy may be updated if needed. All updates will be published on this page.</p>
+<p>This Privacy Policy may be updated if needed. Updates will be posted on this page.</p>
 
 <hr>
 
 <h2>8. Contact Us</h2>
 
 <p>For questions or support, contact us at:</p>
-<p><strong>your-email@example.com</strong></p>
+<p><strong>waleeddevap@gmail.com</strong></p>
 </div>
 
 </body>
