--- a/privacy.html
+++ b/privacy.html
@@ -1,129 +1,74 @@
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Privacy Policy – سياسة الخصوصية | Candy Pop Quest</title>
+<title>Privacy Policy – Candy Pop Quest</title>
 <style>
-  body { font-family: Arial; padding: 20px; line-height: 1.7; }
-  .section { margin-bottom: 60px; }
+  body { font-family: Arial, sans-serif; line-height: 1.7; padding: 20px; }
+  h1, h2 { color: #333; }
 </style>
 </head>
 <body>
 
-<!-- ================= Arabic Version ================= -->
-
-<div class="section" style="text-align: right;">
-<h1>سياسة الخصوصية – لعبة Candy Pop Quest</h1>
-
-<p>نحن نقدّر خصوصيتك. توضح هذه السياسة كيفية جمع البيانات واستخدامها داخل لعبة <strong>Candy Pop Quest</strong>.</p>
-
-<hr>
-
-<h2>1. المعلومات التي يتم جمعها</h2>
-
-<p>قد تقوم اللعبة بجمع بيانات عامة وغير شخصية مثل:</p>
-<ul>
-  <li>إحصاءات الاستخدام عبر Firebase Analytics.</li>
-  <li>معرّفات الإعلانات غير الشخصية من Google AdMob.</li>
-  <li>سجلات الأعطال (Crash Reports).</li>
-</ul>
-
-<p>لا نقوم بجمع أي بيانات شخصية مثل الاسم أو البريد الإلكتروني أو رقم الهاتف أو الموقع الدقيق.</p>
-
-<hr>
-
-<h2>2. الإعلانات (AdMob)</h2>
-
-<p>تستخدم اللعبة خدمة <strong>Google AdMob</strong> لعرض الإعلانات.</p>
-<p>قد تجمع Google معلومات غير شخصية لتحسين جودة الإعلانات.</p>
-<p>يمكن للمستخدم اختيار <strong>رفض الإعلانات المخصصة</strong> من خلال شاشة الموافقة داخل اللعبة.</p>
-
-<hr>
-
-<h2>3. التحليلات (Firebase Analytics)</h2>
-
-<p>تساعدنا Firebase Analytics في تحسين تجربة اللاعب.</p>
-<p>في حال رفض المستخدم، لن يتم تفعيل التحليلات.</p>
-
-<hr>
-
-<h2>4. مشاركة البيانات</h2>
-
-<p>لا يتم مشاركة بياناتك مع أي طرف خارجي باستثناء خدمات Google (AdMob وFirebase) وفق سياساتها.</p>
-
-<hr>
-
-<h2>5. حماية البيانات</h2>
-
-<p>نستخدم إجراءات قياسية لحماية البيانات ومنع الوصول غير المصرّح به.</p>
-
-<hr>
-
-<h2>6. حقوق المستخدم</h2>
-
-<ul>
-  <li>رفض الإعلانات المخصّصة.</li>
-  <li>تعطيل التحليلات.</li>
-</ul>
-
-<hr>
-
-<h2>7. تحديثات السياسة</h2>
-
-<p>قد نقوم بتحديث هذه السياسة عند الحاجة. سيتم نشر التحديث في هذه الصفحة.</p>
-
-<hr>
-
-<h2>8. التواصل</h2>
-
-<p>للاستفسار أو الدعم الفني، تواصل معنا عبر:</p>
-<p><strong>waleeddevap@gmail.com</strong></p>
-</div>
-
-<!-- ================ English Version ================ -->
-
-<div class="section" dir="ltr" style="text-align: left;">
 <h1>Privacy Policy – Candy Pop Quest</h1>
 
-<p>Your privacy is important to us. This policy explains how data is collected and used inside the game <strong>Candy Pop Quest</strong>.</p>
+<p>Your privacy is important to us. This Privacy Policy explains how data is collected and used inside the game <strong>Candy Pop Quest</strong>.</p>
 
 <hr>
 
 <h2>1. Information We Collect</h2>
 
-<p>The game may collect non-personal data such as:</p>
+<p>The game may collect non-personal data only, including:</p>
+
 <ul>
   <li>Usage statistics through Firebase Analytics.</li>
   <li>Non-personal advertising identifiers through Google AdMob.</li>
-  <li>Crash reports and technical logs.</li>
+  <li>Crash reports and technical diagnostics (Crashlytics).</li>
 </ul>
 
-<p>We do NOT collect personal information such as name, email, phone number, or precise location.</p>
+<p><strong>No personal information</strong> (such as name, email, phone number, address, or precise location) is collected.</p>
 
 <hr>
 
 <h2>2. Advertising (Google AdMob)</h2>
 
-<p>The game uses <strong>Google AdMob</strong> to display ads.</p>
-<p>Google may collect non-personal data to improve ad quality.</p>
-<p>Users may choose to <strong>opt out of personalized ads</strong> through the in-game consent screen.</p>
+<p>This game uses <strong>Google AdMob</strong> to display ads.</p>
+
+<ul>
+  <li>Google may collect non-personal data to improve ad quality.</li>
+  <li>Users can choose to <strong>opt-out of personalized ads</strong> through the in-game consent screen.</li>
+  <li>If the user denies consent, only <strong>non-personalized ads (NPA)</strong> are shown.</li>
+</ul>
 
 <hr>
 
 <h2>3. Analytics (Firebase Analytics)</h2>
 
-<p>Firebase Analytics helps us understand and improve player experience.</p>
-<p>Analytics is disabled automatically if the user declines consent.</p>
+<p>Firebase Analytics helps us understand how players use the game.</p>
+
+<ul>
+  <li>Analytics is <strong>disabled automatically</strong> if the user denies consent.</li>
+  <li>No personally identifiable information (PII) is collected.</li>
+</ul>
 
 <hr>
 
 <h2>4. Data Sharing</h2>
 
-<p>No data is shared with third parties except Google services (AdMob, Firebase) according to their policies.</p>
+<p>We do not share any data with third parties except:</p>
+
+<ul>
+  <li><strong>Google AdMob</strong> – for displaying ads</li>
+  <li><strong>Firebase / Crashlytics</strong> – for app analytics and crash reporting</li>
+</ul>
+
+<p>These services handle data according to their own privacy policies.</p>
 
 <hr>
 
 <h2>5. Data Security</h2>
+
+<p>All data transmitted between the app and external services is <strong>encrypted using secure protocols</strong>.</p>
 
 <p>We use standard security practices to protect data and prevent unauthorized access.</p>
 
@@ -131,24 +76,32 @@
 
 <h2>6. User Rights</h2>
 
+<p>Players can:</p>
+
 <ul>
-  <li>Disable personalized ads.</li>
-  <li>Disable analytics at any time.</li>
+  <li>Opt-out of personalized advertising</li>
+  <li>Disable analytics collection at any time through the consent screen (if provided)</li>
 </ul>
 
 <hr>
 
-<h2>7. Policy Updates</h2>
+<h2>7. Children’s Privacy</h2>
 
-<p>This Privacy Policy may be updated if needed. Updates will be posted on this page.</p>
+<p>This game does not knowingly collect personal information from children.</p>
 
 <hr>
 
-<h2>8. Contact Us</h2>
+<h2>8. Policy Updates</h2>
 
-<p>For questions or support, contact us at:</p>
+<p>This Privacy Policy may be updated when necessary. Updates will be posted on this page.</p>
+
+<hr>
+
+<h2>9. Contact Us</h2>
+
+<p>If you have any questions or requests, you can contact us at:</p>
+
 <p><strong>waleeddevap@gmail.com</strong></p>
-</div>
 
 </body>
 </html>
