--- a/privacy.html
+++ b/privacy.html
@@ -1,107 +1,275 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Privacy Policy – Candy Pop Quest</title>
-<style>
-  body { font-family: Arial, sans-serif; line-height: 1.7; padding: 20px; }
-  h1, h2 { color: #333; }
-</style>
+  <meta charset="UTF-8" />
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1.0"
+  />
+  <title>Privacy Policy – Candy Pop Quest</title>
+  <style>
+    body {
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+        Roboto, sans-serif;
+      line-height: 1.6;
+      margin: 0;
+      padding: 0;
+      background: #f7f7fb;
+      color: #222;
+    }
+    .container {
+      max-width: 900px;
+      margin: 0 auto;
+      padding: 24px 16px 40px;
+    }
+    .card {
+      background: #fff;
+      border-radius: 12px;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.06);
+      padding: 24px 20px;
+    }
+    h1,
+    h2 {
+      color: #222;
+    }
+    h1 {
+      font-size: 1.9rem;
+      margin-top: 0;
+    }
+    h2 {
+      font-size: 1.25rem;
+      margin-top: 1.4rem;
+      border-left: 4px solid #ff7ac4;
+      padding-left: 8px;
+    }
+    p {
+      margin: 0.4rem 0 0.6rem;
+    }
+    ul {
+      padding-left: 1.3rem;
+      margin: 0.3rem 0 0.7rem;
+    }
+    strong {
+      font-weight: 600;
+    }
+    .muted {
+      color: #666;
+      font-size: 0.9rem;
+    }
+    a {
+      color: #ff4fa6;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    @media (min-width: 768px) {
+      .card {
+        padding: 32px 32px;
+      }
+      h1 {
+        font-size: 2.1rem;
+      }
+    }
+  </style>
 </head>
 <body>
+  <div class="container">
+    <div class="card">
+      <h1>Privacy Policy – Candy Pop Quest</h1>
+      <p class="muted">Last updated: 2025</p>
 
-<h1>Privacy Policy – Candy Pop Quest</h1>
+      <p>
+        Your privacy is important to us. This Privacy Policy explains how data
+        is collected and used inside the game <strong>Candy Pop Quest</strong>.
+      </p>
 
-<p>Your privacy is important to us. This Privacy Policy explains how data is collected and used inside the game <strong>Candy Pop Quest</strong>.</p>
+      <h2>1. Information We Collect</h2>
+      <p>
+        The game may collect <strong>non-personal data only</strong>,
+        including:
+      </p>
+      <ul>
+        <li>Usage statistics through Firebase Analytics.</li>
+        <li>
+          Advertising identifiers and related data through Google AdMob.
+        </li>
+        <li>
+          Crash reports and technical diagnostics (e.g. Firebase Crashlytics).
+        </li>
+      </ul>
+      <p>We do <strong>NOT</strong> collect:</p>
+      <ul>
+        <li>Your name, email address, phone number, or home address.</li>
+        <li>
+          Precise location data (only coarse location may be inferred by Google
+          for fraud prevention and measurement).
+        </li>
+      </ul>
 
-<hr>
+      <h2>2. Regional Differences and User Consent</h2>
+      <p>
+        Candy Pop Quest is played in different countries with different privacy
+        laws.
+      </p>
+      <ul>
+        <li>
+          In certain regions such as the European Economic Area (EEA) and the
+          United Kingdom, we are required to ask for your consent before using
+          data for analytics and personalized advertising.
+        </li>
+        <li>
+          In other regions, Google AdMob and Firebase may operate under
+          different legal bases, and personalized ads may be shown without an
+          in-app consent dialog, as permitted by local regulations.
+        </li>
+      </ul>
+      <p>
+        When consent is required (for example in the EEA/UK), you will see a
+        consent screen in the app:
+      </p>
+      <ul>
+        <li>
+          If you tap <strong>“Allow”</strong>:
+          <ul>
+            <li>Analytics will be enabled.</li>
+            <li>Personalized ads may be shown where supported.</li>
+          </ul>
+        </li>
+        <li>
+          If you tap <strong>“Decline”</strong>:
+          <ul>
+            <li>Analytics will be disabled.</li>
+            <li>Only non-personalized ads (NPA) will be shown.</li>
+          </ul>
+        </li>
+      </ul>
 
-<h2>1. Information We Collect</h2>
+      <h2>3. Advertising (Google AdMob)</h2>
+      <p>
+        This game uses Google AdMob to display ads and keep the game free to
+        play.
+      </p>
+      <ul>
+        <li>
+          Google may collect non-personal data (such as device identifiers, app
+          usage events, and coarse location) to deliver, measure, and improve
+          ads and to prevent fraud and abuse.
+        </li>
+        <li>
+          In regions where consent is required, your choice on the consent
+          screen controls whether ads are personalized or non-personalized.
+        </li>
+        <li>
+          In other regions, personalized ads may be shown by default, as
+          allowed by local laws and Google’s policies.
+        </li>
+      </ul>
 
-<p>The game may collect non-personal data only, including:</p>
+      <h2>4. Analytics (Firebase Analytics)</h2>
+      <p>
+        We use Firebase Analytics to understand how players use the game,
+        improve gameplay balance, fix bugs, and enhance the overall experience.
+      </p>
+      <ul>
+        <li>
+          When analytics is enabled, anonymous usage statistics and events
+          related to gameplay may be collected.
+        </li>
+        <li>
+          When you decline consent in regions where consent is required,
+          analytics is disabled and no analytics events are sent from your
+          device.
+        </li>
+      </ul>
+      <p>
+        We do not use Firebase Analytics to collect personally identifiable
+        information (PII).
+      </p>
 
-<ul>
-  <li>Usage statistics through Firebase Analytics.</li>
-  <li>Non-personal advertising identifiers through Google AdMob.</li>
-  <li>Crash reports and technical diagnostics (Crashlytics).</li>
-</ul>
+      <h2>5. Data Sharing</h2>
+      <p>We do <strong>not</strong> sell your data.</p>
+      <p>
+        We may share limited data with the following third-party service
+        providers, strictly for the purposes described above:
+      </p>
+      <ul>
+        <li>Google AdMob – for displaying and measuring ads.</li>
+        <li>
+          Firebase services (such as Analytics and Crashlytics) – for
+          analytics, crash reporting, and app diagnostics.
+        </li>
+      </ul>
+      <p>
+        These third-party services handle data in accordance with their own
+        privacy policies.
+      </p>
 
-<p><strong>No personal information</strong> (such as name, email, phone number, address, or precise location) is collected.</p>
+      <h2>6. Data Security</h2>
+      <p>
+        All communication between the app and external services uses
+        industry-standard encrypted connections (e.g. HTTPS).
+      </p>
+      <p>
+        We apply reasonable technical measures to protect data against
+        unauthorized access, loss, or misuse.
+      </p>
 
-<hr>
+      <h2>7. User Choices and Rights</h2>
+      <ul>
+        <li>
+          In regions where a consent dialog is shown, you can choose
+          “Allow” or “Decline” on the privacy &amp; consent screen.
+        </li>
+        <li>
+          In some versions of the game, you may also change your choice
+          later from the in-game Settings screen (if provided).
+        </li>
+        <li>
+          If you switch from Allow to Decline in those regions:
+          <ul>
+            <li>Analytics will be disabled.</li>
+            <li>Only non-personalized ads (NPA) will be shown.</li>
+          </ul>
+        </li>
+        <li>
+          If you switch from Decline to Allow:
+          <ul>
+            <li>Analytics will be enabled.</li>
+            <li>Personalized ads may be used where supported.</li>
+          </ul>
+        </li>
+      </ul>
 
-<h2>2. Advertising (Google AdMob)</h2>
+      <h2>8. Children’s Privacy</h2>
+      <p>
+        Candy Pop Quest is designed as a family-friendly game. We do not
+        knowingly collect personal information from children.
+      </p>
+      <p>
+        If you believe that your child has provided us with personal
+        information by mistake, please contact us and we will take steps to
+        remove such information.
+      </p>
 
-<p>This game uses <strong>Google AdMob</strong> to display ads.</p>
+      <h2>9. Policy Updates</h2>
+      <p>
+        We may update this Privacy Policy from time to time. Any changes will
+        be posted on this page and may also be reflected in the in-app privacy
+        section.
+      </p>
+      <p>
+        We encourage you to review this Privacy Policy periodically to stay
+        informed about how we are protecting your data.
+      </p>
 
-<ul>
-  <li>Google may collect non-personal data to improve ad quality.</li>
-  <li>Users can choose to <strong>opt-out of personalized ads</strong> through the in-game consent screen.</li>
-  <li>If the user denies consent, only <strong>non-personalized ads (NPA)</strong> are shown.</li>
-</ul>
-
-<hr>
-
-<h2>3. Analytics (Firebase Analytics)</h2>
-
-<p>Firebase Analytics helps us understand how players use the game.</p>
-
-<ul>
-  <li>Analytics is <strong>disabled automatically</strong> if the user denies consent.</li>
-  <li>No personally identifiable information (PII) is collected.</li>
-</ul>
-
-<hr>
-
-<h2>4. Data Sharing</h2>
-
-<p>We do not share any data with third parties except:</p>
-
-<ul>
-  <li><strong>Google AdMob</strong> – for displaying ads</li>
-  <li><strong>Firebase / Crashlytics</strong> – for app analytics and crash reporting</li>
-</ul>
-
-<p>These services handle data according to their own privacy policies.</p>
-
-<hr>
-
-<h2>5. Data Security</h2>
-
-<p>All data transmitted between the app and external services is <strong>encrypted using secure protocols</strong>.</p>
-
-<p>We use standard security practices to protect data and prevent unauthorized access.</p>
-
-<hr>
-
-<h2>6. User Rights</h2>
-
-<p>Players can:</p>
-
-<ul>
-  <li>Opt-out of personalized advertising</li>
-  <li>Disable analytics collection at any time through the consent screen (if provided)</li>
-</ul>
-
-<hr>
-
-<h2>7. Children’s Privacy</h2>
-
-<p>This game does not knowingly collect personal information from children.</p>
-
-<hr>
-
-<h2>8. Policy Updates</h2>
-
-<p>This Privacy Policy may be updated when necessary. Updates will be posted on this page.</p>
-
-<hr>
-
-<h2>9. Contact Us</h2>
-
-<p>If you have any questions or requests, you can contact us at:</p>
-
-<p><strong>waleeddevap@gmail.com</strong></p>
-
+      <h2>10. Contact Us</h2>
+      <p>
+        If you have any questions, concerns, or requests regarding this Privacy
+        Policy or data usage in Candy Pop Quest, you can contact us at:
+      </p>
+      <p><strong>Email:</strong> <a href="mailto:waleeddevap@gmail.com">waleeddevap@gmail.com</a></p>
+    </div>
+  </div>
 </body>
 </html>
