--- a/privacy.html
+++ b/privacy.html
@@ -126,21 +126,32 @@
       </ul>
       <p>
         When consent is required (for example in the EEA/UK), you will see a
-        consent screen in the app:
+        consent screen in the app. In all regions, a privacy &amp; consent
+        section is also available from the in-game Settings menu, so you can
+        review or change your choice later.
       </p>
       <ul>
         <li>
           If you tap <strong>“Allow”</strong>:
           <ul>
             <li>Analytics will be enabled.</li>
-            <li>Personalized ads may be shown where supported.</li>
+            <li>
+              Personalized ads may be shown where supported and allowed by
+              local regulations.
+            </li>
           </ul>
         </li>
         <li>
           If you tap <strong>“Decline”</strong>:
           <ul>
             <li>Analytics will be disabled.</li>
-            <li>Only non-personalized ads (NPA) will be shown.</li>
+            <li>
+              In regions where consent for ad personalization is required and
+              supported (e.g. EEA/UK), only non-personalized ads (NPA) will be
+              used. In other regions, ads may still be personalized according
+              to Google’s policies, but analytics from the app will remain
+              disabled.
+            </li>
           </ul>
         </li>
       </ul>
@@ -157,8 +168,9 @@
           ads and to prevent fraud and abuse.
         </li>
         <li>
-          In regions where consent is required, your choice on the consent
-          screen controls whether ads are personalized or non-personalized.
+          In regions where consent is required, your choice on the consent and
+          privacy screens controls whether ads are personalized or
+          non-personalized, to the extent supported by Google’s ad systems.
         </li>
         <li>
           In other regions, personalized ads may be shown by default, as
@@ -177,9 +189,9 @@
           related to gameplay may be collected.
         </li>
         <li>
-          When you decline consent in regions where consent is required,
-          analytics is disabled and no analytics events are sent from your
-          device.
+          When you choose to decline consent on the privacy &amp; consent
+          screen, analytics is disabled and no analytics events are sent from
+          your device, regardless of your region.
         </li>
       </ul>
       <p>
@@ -218,25 +230,35 @@
       <h2>7. User Choices and Rights</h2>
       <ul>
         <li>
-          In regions where a consent dialog is shown, you can choose
-          “Allow” or “Decline” on the privacy &amp; consent screen.
+          You can review and change your privacy choice at any time from the
+          in-game <strong>Settings &gt; Privacy &amp; consent</strong> section
+          (where available).
         </li>
         <li>
-          In some versions of the game, you may also change your choice
-          later from the in-game Settings screen (if provided).
+          In regions where a consent dialog is required (for example EEA/UK),
+          you can choose “Allow” or “Decline” on the consent and privacy
+          screens.
         </li>
         <li>
-          If you switch from Allow to Decline in those regions:
+          If you switch from Allow to Decline:
           <ul>
             <li>Analytics will be disabled.</li>
-            <li>Only non-personalized ads (NPA) will be shown.</li>
+            <li>
+              In regions where required and supported, only non-personalized
+              ads (NPA) will be shown. In other regions, ads may remain
+              personalized according to Google’s policies, but analytics will
+              still be disabled.
+            </li>
           </ul>
         </li>
         <li>
           If you switch from Decline to Allow:
           <ul>
-            <li>Analytics will be enabled.</li>
-            <li>Personalized ads may be used where supported.</li>
+            <li>Analytics will be enabled again.</li>
+            <li>
+              Personalized ads may be used where supported and allowed by local
+              regulations.
+            </li>
           </ul>
         </li>
       </ul>
@@ -268,7 +290,10 @@
         If you have any questions, concerns, or requests regarding this Privacy
         Policy or data usage in Candy Pop Quest, you can contact us at:
       </p>
-      <p><strong>Email:</strong> <a href="mailto:waleeddevap@gmail.com">waleeddevap@gmail.com</a></p>
+      <p>
+        <strong>Email:</strong>
+        <a href="mailto:waleeddevap@gmail.com">waleeddevap@gmail.com</a>
+      </p>
     </div>
   </div>
 </body>
