--- a/privacy.html
+++ b/privacy.html
@@ -86,8 +86,7 @@
 
       <h2>1. Information We Collect</h2>
       <p>
-        The game may collect <strong>non-personal data only</strong>,
-        including:
+        The game may collect <strong>non-personal data only</strong>, including:
       </p>
       <ul>
         <li>Usage statistics through Firebase Analytics.</li>
@@ -126,32 +125,21 @@
       </ul>
       <p>
         When consent is required (for example in the EEA/UK), you will see a
-        consent screen in the app. In all regions, a privacy &amp; consent
-        section is also available from the in-game Settings menu, so you can
-        review or change your choice later.
+        consent screen in the app:
       </p>
       <ul>
         <li>
           If you tap <strong>“Allow”</strong>:
           <ul>
             <li>Analytics will be enabled.</li>
-            <li>
-              Personalized ads may be shown where supported and allowed by
-              local regulations.
-            </li>
+            <li>Personalized ads may be shown where supported.</li>
           </ul>
         </li>
         <li>
           If you tap <strong>“Decline”</strong>:
           <ul>
             <li>Analytics will be disabled.</li>
-            <li>
-              In regions where consent for ad personalization is required and
-              supported (e.g. EEA/UK), only non-personalized ads (NPA) will be
-              used. In other regions, ads may still be personalized according
-              to Google’s policies, but analytics from the app will remain
-              disabled.
-            </li>
+            <li>Only non-personalized ads (NPA) will be shown.</li>
           </ul>
         </li>
       </ul>
@@ -168,15 +156,19 @@
           ads and to prevent fraud and abuse.
         </li>
         <li>
-          In regions where consent is required, your choice on the consent and
-          privacy screens controls whether ads are personalized or
-          non-personalized, to the extent supported by Google’s ad systems.
+          In regions where consent is required, your choice on the consent
+          screen controls whether ads are personalized or non-personalized.
         </li>
         <li>
           In other regions, personalized ads may be shown by default, as
           allowed by local laws and Google’s policies.
         </li>
       </ul>
+      <p>
+        For more details on how Google uses data from apps like this one, you
+        can review Google’s own policies, for example “How Google uses
+        information from sites or apps that use our services”.
+      </p>
 
       <h2>4. Analytics (Firebase Analytics)</h2>
       <p>
@@ -189,9 +181,9 @@
           related to gameplay may be collected.
         </li>
         <li>
-          When you choose to decline consent on the privacy &amp; consent
-          screen, analytics is disabled and no analytics events are sent from
-          your device, regardless of your region.
+          When you decline consent in regions where consent is required,
+          analytics is disabled and no analytics events are sent from your
+          device.
         </li>
       </ul>
       <p>
@@ -230,35 +222,25 @@
       <h2>7. User Choices and Rights</h2>
       <ul>
         <li>
-          You can review and change your privacy choice at any time from the
-          in-game <strong>Settings &gt; Privacy &amp; consent</strong> section
-          (where available).
+          In regions where a consent dialog is shown, you can choose
+          “Allow” or “Decline” on the in-app privacy &amp; consent screen.
         </li>
         <li>
-          In regions where a consent dialog is required (for example EEA/UK),
-          you can choose “Allow” or “Decline” on the consent and privacy
-          screens.
+          In some versions of the game, you may also change your choice later
+          from the in-game Settings screen (if provided).
         </li>
         <li>
-          If you switch from Allow to Decline:
+          If you switch from Allow to Decline in those regions:
           <ul>
             <li>Analytics will be disabled.</li>
-            <li>
-              In regions where required and supported, only non-personalized
-              ads (NPA) will be shown. In other regions, ads may remain
-              personalized according to Google’s policies, but analytics will
-              still be disabled.
-            </li>
+            <li>Only non-personalized ads (NPA) will be shown.</li>
           </ul>
         </li>
         <li>
           If you switch from Decline to Allow:
           <ul>
-            <li>Analytics will be enabled again.</li>
-            <li>
-              Personalized ads may be used where supported and allowed by local
-              regulations.
-            </li>
+            <li>Analytics will be enabled.</li>
+            <li>Personalized ads may be used where supported.</li>
           </ul>
         </li>
       </ul>
