--- a/privacy.html
+++ b/privacy.html
@@ -86,8 +86,12 @@
 
       <h2>1. Information We Collect</h2>
       <p>
-        The game may collect <strong>non-personal data only</strong>, including:
+        The game primarily collects <strong>usage and technical data</strong>
+        that does not directly identify you as an individual. However, some
+        partners such as Google AdMob may treat certain identifiers (for
+        example, advertising IDs) as personal data under laws such as the GDPR.
       </p>
+      <p>The data we may collect includes:</p>
       <ul>
         <li>Usage statistics through Firebase Analytics.</li>
         <li>
@@ -97,12 +101,12 @@
           Crash reports and technical diagnostics (e.g. Firebase Crashlytics).
         </li>
       </ul>
-      <p>We do <strong>NOT</strong> collect:</p>
+      <p>We do <strong>NOT</strong> intentionally collect:</p>
       <ul>
         <li>Your name, email address, phone number, or home address.</li>
         <li>
-          Precise location data (only coarse location may be inferred by Google
-          for fraud prevention and measurement).
+          Precise GPS location data (only coarse location may be inferred by
+          Google for fraud prevention and measurement).
         </li>
       </ul>
 
@@ -116,6 +120,11 @@
           In certain regions such as the European Economic Area (EEA) and the
           United Kingdom, we are required to ask for your consent before using
           data for analytics and personalized advertising.
+        </li>
+        <li>
+          In these regions, we use Google’s
+          <strong>User Messaging Platform (UMP)</strong> to request and store
+          your consent choices for analytics and advertising.
         </li>
         <li>
           In other regions, Google AdMob and Firebase may operate under
@@ -151,13 +160,14 @@
       </p>
       <ul>
         <li>
-          Google may collect non-personal data (such as device identifiers, app
-          usage events, and coarse location) to deliver, measure, and improve
-          ads and to prevent fraud and abuse.
+          Google may collect usage and technical data (such as advertising
+          identifiers, app usage events, and coarse location) to deliver,
+          measure, and improve ads and to prevent fraud and abuse.
         </li>
         <li>
           In regions where consent is required, your choice on the consent
-          screen controls whether ads are personalized or non-personalized.
+          screen controls whether ads are personalized or non-personalized
+          (NPA).
         </li>
         <li>
           In other regions, personalized ads may be shown by default, as
@@ -166,8 +176,10 @@
       </ul>
       <p>
         For more details on how Google uses data from apps like this one, you
-        can review Google’s own policies, for example “How Google uses
-        information from sites or apps that use our services”.
+        can review Google’s own documentation:
+        <a href="https://policies.google.com/technologies/partner-sites" target="_blank" rel="noopener noreferrer">
+          https://policies.google.com/technologies/partner-sites
+        </a>.
       </p>
 
       <h2>4. Analytics (Firebase Analytics)</h2>
