--- a/privacy.html
+++ b/privacy.html
@@ -2,74 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta
-    name="viewport"
-    content="width=device-width, initial-scale=1.0"
-  />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Privacy Policy – Candy Pop Quest</title>
   <style>
-    body {
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-        Roboto, sans-serif;
-      line-height: 1.6;
-      margin: 0;
-      padding: 0;
-      background: #f7f7fb;
-      color: #222;
-    }
-    .container {
-      max-width: 900px;
-      margin: 0 auto;
-      padding: 24px 16px 40px;
-    }
-    .card {
-      background: #fff;
-      border-radius: 12px;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.06);
-      padding: 24px 20px;
-    }
-    h1,
-    h2 {
-      color: #222;
-    }
-    h1 {
-      font-size: 1.9rem;
-      margin-top: 0;
-    }
-    h2 {
-      font-size: 1.25rem;
-      margin-top: 1.4rem;
-      border-left: 4px solid #ff7ac4;
-      padding-left: 8px;
-    }
-    p {
-      margin: 0.4rem 0 0.6rem;
-    }
-    ul {
-      padding-left: 1.3rem;
-      margin: 0.3rem 0 0.7rem;
-    }
-    strong {
-      font-weight: 600;
-    }
-    .muted {
-      color: #666;
-      font-size: 0.9rem;
-    }
-    a {
-      color: #ff4fa6;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
+    body { font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif; line-height: 1.6; margin: 0; padding: 0; background: #f7f7fb; color: #222; }
+    .container { max-width: 900px; margin: 0 auto; padding: 24px 16px 40px; }
+    .card { background: #fff; border-radius: 12px; box-shadow: 0 8px 20px rgba(0,0,0,0.06); padding: 24px 20px; }
+    h1, h2 { color: #222; }
+    h1 { font-size: 1.9rem; margin-top: 0; }
+    h2 { font-size: 1.25rem; margin-top: 1.4rem; border-left: 4px solid #ff7ac4; padding-left: 8px; }
+    p { margin: 0.4rem 0 0.6rem; }
+    ul { padding-left: 1.3rem; margin: 0.3rem 0 0.7rem; }
+    strong { font-weight: 600; }
+    .muted { color: #666; font-size: 0.9rem; }
+    a { color: #ff4fa6; text-decoration: none; }
+    a:hover { text-decoration: underline; }
     @media (min-width: 768px) {
-      .card {
-        padding: 32px 32px;
-      }
-      h1 {
-        font-size: 2.1rem;
-      }
+      .card { padding: 32px 32px; }
+      h1 { font-size: 2.1rem; }
     }
   </style>
 </head>
@@ -77,217 +27,84 @@
   <div class="container">
     <div class="card">
       <h1>Privacy Policy – Candy Pop Quest</h1>
-      <p class="muted">Last updated: 2025</p>
+      <p class="muted">Last updated: 2025-01-15</p>
 
-      <p>
-        Your privacy is important to us. This Privacy Policy explains how data
-        is collected and used inside the game <strong>Candy Pop Quest</strong>.
-      </p>
+      <p>Your privacy is important to us. This Privacy Policy explains how data is collected and used inside the game <strong>Candy Pop Quest</strong>.</p>
 
       <h2>1. Information We Collect</h2>
-      <p>
-        The game primarily collects <strong>usage and technical data</strong>
-        that does not directly identify you as an individual. However, some
-        partners such as Google AdMob may treat certain identifiers (for
-        example, advertising IDs) as personal data under laws such as the GDPR.
-      </p>
+      <p>The game primarily collects <strong>usage and technical data</strong> that does not directly identify you as an individual. However, some partners such as Google AdMob may treat certain identifiers (for example, advertising IDs) as personal data under laws such as the GDPR.</p>
       <p>The data we may collect includes:</p>
       <ul>
         <li>Usage statistics through Firebase Analytics.</li>
-        <li>
-          Advertising identifiers and related data through Google AdMob.
-        </li>
-        <li>
-          Crash reports and technical diagnostics (e.g. Firebase Crashlytics).
-        </li>
+        <li>Advertising identifiers and related data through Google AdMob.</li>
+        <li>Crash reports and technical diagnostics (e.g. Firebase Crashlytics).</li>
+        <li>Push notification tokens and delivery data through Firebase Messaging (FCM).</li>
       </ul>
       <p>We do <strong>NOT</strong> intentionally collect:</p>
       <ul>
         <li>Your name, email address, phone number, or home address.</li>
-        <li>
-          Precise GPS location data (only coarse location may be inferred by
-          Google for fraud prevention and measurement).
-        </li>
+        <li>Precise GPS location data (only coarse location may be inferred by Google for fraud prevention and measurement).</li>
       </ul>
 
       <h2>2. Regional Differences and User Consent</h2>
-      <p>
-        Candy Pop Quest is played in different countries with different privacy
-        laws.
-      </p>
       <ul>
-        <li>
-          In certain regions such as the European Economic Area (EEA) and the
-          United Kingdom, we are required to ask for your consent before using
-          data for analytics and personalized advertising.
-        </li>
-        <li>
-          In these regions, we use Google’s
-          <strong>User Messaging Platform (UMP)</strong> to request and store
-          your consent choices for analytics and advertising.
-        </li>
-        <li>
-          In other regions, Google AdMob and Firebase may operate under
-          different legal bases, and personalized ads may be shown without an
-          in-app consent dialog, as permitted by local regulations.
-        </li>
+        <li>In certain regions such as the European Economic Area (EEA) and the United Kingdom, we are required to ask for your consent before using data for analytics and personalized advertising.</li>
+        <li>In these regions, we use Google’s <strong>User Messaging Platform (UMP)</strong> to request and store your consent choices for analytics and advertising.</li>
+        <li><strong>Where required by law, we request consent</strong> before enabling analytics or personalized ads.</li>
       </ul>
-      <p>
-        When consent is required (for example in the EEA/UK), you will see a
-        consent screen in the app:
-      </p>
+      <p>When consent is required (for example in the EEA/UK), you will see a consent screen in the app:</p>
       <ul>
-        <li>
-          If you tap <strong>“Allow”</strong>:
-          <ul>
-            <li>Analytics will be enabled.</li>
-            <li>Personalized ads may be shown where supported.</li>
-          </ul>
-        </li>
-        <li>
-          If you tap <strong>“Decline”</strong>:
-          <ul>
-            <li>Analytics will be disabled.</li>
-            <li>Only non-personalized ads (NPA) will be shown.</li>
-          </ul>
-        </li>
+        <li>If you tap <strong>“Allow”</strong>: Analytics will be enabled and personalized ads may be shown where supported.</li>
+        <li>If you tap <strong>“Decline”</strong>: Analytics will be disabled and only non-personalized ads (NPA) will be shown.</li>
       </ul>
 
       <h2>3. Advertising (Google AdMob)</h2>
-      <p>
-        This game uses Google AdMob to display ads and keep the game free to
-        play.
-      </p>
+      <p>This game uses Google AdMob to display ads and keep the game free to play.</p>
       <ul>
-        <li>
-          Google may collect usage and technical data (such as advertising
-          identifiers, app usage events, and coarse location) to deliver,
-          measure, and improve ads and to prevent fraud and abuse.
-        </li>
-        <li>
-          In regions where consent is required, your choice on the consent
-          screen controls whether ads are personalized or non-personalized
-          (NPA).
-        </li>
-        <li>
-          In other regions, personalized ads may be shown by default, as
-          allowed by local laws and Google’s policies.
-        </li>
+        <li>Google may collect usage and technical data (such as advertising identifiers, app usage events, and coarse location) to deliver, measure, and improve ads and to prevent fraud and abuse.</li>
+        <li>In regions where consent is required, your choice on the consent screen controls whether ads are personalized or non-personalized (NPA).</li>
       </ul>
-      <p>
-        For more details on how Google uses data from apps like this one, you
-        can review Google’s own documentation:
-        <a href="https://policies.google.com/technologies/partner-sites" target="_blank" rel="noopener noreferrer">
-          https://policies.google.com/technologies/partner-sites
-        </a>.
-      </p>
+      <p>Google Ads/AdMob policy: <a href="https://policies.google.com/technologies/partner-sites" target="_blank" rel="noopener noreferrer">https://policies.google.com/technologies/partner-sites</a></p>
 
       <h2>4. Analytics (Firebase Analytics)</h2>
-      <p>
-        We use Firebase Analytics to understand how players use the game,
-        improve gameplay balance, fix bugs, and enhance the overall experience.
-      </p>
+      <p>We use Firebase Analytics to understand how players use the game, improve gameplay balance, fix bugs, and enhance the overall experience.</p>
       <ul>
-        <li>
-          When analytics is enabled, anonymous usage statistics and events
-          related to gameplay may be collected.
-        </li>
-        <li>
-          When you decline consent in regions where consent is required,
-          analytics is disabled and no analytics events are sent from your
-          device.
-        </li>
+        <li>When analytics is enabled, anonymous usage statistics and events related to gameplay may be collected.</li>
+        <li>When you decline consent in regions where consent is required, analytics is disabled and no analytics events are sent from your device.</li>
       </ul>
-      <p>
-        We do not use Firebase Analytics to collect personally identifiable
-        information (PII).
-      </p>
+      <p>Firebase Privacy: <a href="https://firebase.google.com/support/privacy" target="_blank" rel="noopener noreferrer">https://firebase.google.com/support/privacy</a></p>
 
-      <h2>5. Data Sharing</h2>
+      <h2>5. In-App Purchases</h2>
+      <p>Candy Pop Quest offers optional in-app purchases. Payments are processed by Google Play, and we do not receive or store your payment card details.</p>
+
+      <h2>6. Data Sharing</h2>
       <p>We do <strong>not</strong> sell your data.</p>
-      <p>
-        We may share limited data with the following third-party service
-        providers, strictly for the purposes described above:
-      </p>
+      <p>We may share limited data with the following third-party service providers, strictly for the purposes described above:</p>
       <ul>
         <li>Google AdMob – for displaying and measuring ads.</li>
-        <li>
-          Firebase services (such as Analytics and Crashlytics) – for
-          analytics, crash reporting, and app diagnostics.
-        </li>
+        <li>Firebase services (such as Analytics, Crashlytics, and Messaging) – for analytics, crash reporting, and notifications.</li>
+        <li>Google Play Billing – for processing in-app purchases.</li>
       </ul>
-      <p>
-        These third-party services handle data in accordance with their own
-        privacy policies.
-      </p>
 
-      <h2>6. Data Security</h2>
-      <p>
-        All communication between the app and external services uses
-        industry-standard encrypted connections (e.g. HTTPS).
-      </p>
-      <p>
-        We apply reasonable technical measures to protect data against
-        unauthorized access, loss, or misuse.
-      </p>
+      <h2>7. Data Security</h2>
+      <p>All communication between the app and external services uses industry-standard encrypted connections (e.g. HTTPS).</p>
+      <p>We apply reasonable technical measures to protect data against unauthorized access, loss, or misuse.</p>
 
-      <h2>7. User Choices and Rights</h2>
+      <h2>8. User Choices and Rights</h2>
       <ul>
-        <li>
-          In regions where a consent dialog is shown, you can choose
-          “Allow” or “Decline” on the in-app privacy &amp; consent screen.
-        </li>
-        <li>
-          In some versions of the game, you may also change your choice later
-          from the in-game Settings screen (if provided).
-        </li>
-        <li>
-          If you switch from Allow to Decline in those regions:
-          <ul>
-            <li>Analytics will be disabled.</li>
-            <li>Only non-personalized ads (NPA) will be shown.</li>
-          </ul>
-        </li>
-        <li>
-          If you switch from Decline to Allow:
-          <ul>
-            <li>Analytics will be enabled.</li>
-            <li>Personalized ads may be used where supported.</li>
-          </ul>
-        </li>
+        <li>In regions where a consent dialog is shown, you can choose “Allow” or “Decline” on the in-app privacy &amp; consent screen.</li>
+        <li>In some versions of the game, you may also change your choice later from the in-game Settings screen (if provided).</li>
       </ul>
 
-      <h2>8. Children’s Privacy</h2>
-      <p>
-        Candy Pop Quest is designed as a family-friendly game. We do not
-        knowingly collect personal information from children.
-      </p>
-      <p>
-        If you believe that your child has provided us with personal
-        information by mistake, please contact us and we will take steps to
-        remove such information.
-      </p>
+      <h2>9. Children’s Privacy</h2>
+      <p>Candy Pop Quest is a family‑friendly game but is not specifically directed at children. We do not knowingly collect personal information from children. If you believe that your child has provided personal information by mistake, please contact us.</p>
 
-      <h2>9. Policy Updates</h2>
-      <p>
-        We may update this Privacy Policy from time to time. Any changes will
-        be posted on this page and may also be reflected in the in-app privacy
-        section.
-      </p>
-      <p>
-        We encourage you to review this Privacy Policy periodically to stay
-        informed about how we are protecting your data.
-      </p>
+      <h2>10. Policy Updates</h2>
+      <p>We may update this Privacy Policy from time to time. Any changes will be posted on this page and may also be reflected in the in-app privacy section.</p>
 
-      <h2>10. Contact Us</h2>
-      <p>
-        If you have any questions, concerns, or requests regarding this Privacy
-        Policy or data usage in Candy Pop Quest, you can contact us at:
-      </p>
-      <p>
-        <strong>Email:</strong>
-        <a href="mailto:waleeddevap@gmail.com">waleeddevap@gmail.com</a>
-      </p>
+      <h2>11. Contact Us</h2>
+      <p>If you have any questions, concerns, or requests regarding this Privacy Policy or data usage in Candy Pop Quest, you can contact us at:</p>
+      <p><strong>Email:</strong> <a href="mailto:waleeddevap@gmail.com">waleeddevap@gmail.com</a></p>
     </div>
   </div>
 </body>
